--- a/forgot.html
+++ b/forgot.html
@@ -20,7 +20,7 @@
 						<div class="row align-items-center">
 							<div class="col-xl-2 col-lg-2 col-md-6 col-6">
 								<div class="logo">
-									<a href="/home.html">
+									<a href="home.html">
 										<img class="logo" src="img/PEAK.png" alt="">
 									</a>
 								</div>
