--- a/research.html
+++ b/research.html
@@ -142,7 +142,7 @@
                 <h1>Research </h1>
                 <div class="row">
 
-                    <div class="col-md-9">
+                    <div class="col-md-9 bg-white ">
                         <div class="head">
                             <div class="form-group has-search pt-3 pb-3">
                                 <span class="fa fa-search form-control-feedback"></span>
