--- a/research.html
+++ b/research.html
@@ -158,12 +158,11 @@
                             <div class="clearfix mb-4">
                                     <div class="float-left">
                                             <ul class="nav nav-pills">
-                                                <li role="presentation" class="nav-link active"><a href="#">Docs</a></li>
+                                                <li role="presentation" class="nav-link active"><a href="research.html">Docs</a></li>
                                                 <li role="presentation" class="nav-link"><a href="#">Annotations</a></li>
-                                                <li role="presentation" class="nav-link"><a href="#">Datasets</a></li>
+                                                <li role="presentation" class="nav-link"><a href="researchdataset.html">Datasets</a></li>
                                                 <li role="presentation" class="nav-link"><a href="#">Images</a></li>
                                             </ul>
-                                    
                                     </div>
                                     <div class="float-right pt-3">
                                         <label class="sort-by mr-1">Sort by</label>
@@ -176,7 +175,7 @@
                                             2,482 results
                                         </span>
 
-                                        <span id="filter-button" class="text-white bg-secondary p-1 ml-2 pr-3 pl-3 filter-button"> <i class="fas fa-filter"></i> filter by</span>
+                                        <span id="filter-button" class="text-white bg-secondary p-1 ml-2 pr-3 pl-3 filter-button"> <i class="fas fa-filter"></i> <span class="hide-mobile">filter by</span></span>
                                     </div>
                             </div>
                             <a href="" class="mt-3 pt-3"><i class="fa fa-comments-o"></i> View annotations for these search results</a>
